--- a/.env.example
+++ b/.env.example
@@ -27,12 +27,12 @@ API_DEBUG=true
 API_STRICT=false
 API_VERSION=v1
 API_PREFIX=api
-API_DOMAIN=localhost
+API_DOMAIN=api.local
 
 ### Domains & Hosts  ##################################################
-MAIN_DOMAIN=localhost
-APP_URL=http://localhost
-
+MAIN_DOMAIN=api.local
+APP_URL=http://api.local
+API_HOST=http://api.local
 ### Tokens  ###########################################################
 JWT_TTL=1440 # 1day
 JWT_REMEMBER_TTL=20160 # weeks
