--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -3,7 +3,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
-    server_name api.affninja.local;
+    server_name api.local;
     root /var/www/public;
     index index.php index.html index.htm;
 
